@@ -54,6 +54,8 @@ Changes since 0.2.8.2:
   console
 
   Featurelets:
+- Added PLAYER_RANDOM_COLOR for lazy people who just want to have a
+  color that differs from everyone else on the server.
 - Configuration files get reloaded on SIGHUP
 - A subculture list for server groups that are not managed by our main master servers
 - A friends list and filter for the server browser that shows you only servers with
